objects/Address2__c.object
<CustomObject>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Owner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses2</relationshipLabel>
        <relationshipName>Addresses2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AddressIntegrationId__c</fullName>
        <description>Identificador Externo de la dirección</description>
        <externalId>true</externalId>
        <inlineHelpText>Identificador Externo de la dirección</inlineHelpText>
        <label>Address Integration Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Number__c</fullName>
        <label>Address Number</label>
        <precision>10</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Altura_Interna__c</fullName>
        <label>Altura Interna</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Barrio__c</fullName>
        <label>Barrio</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calle_Interna_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Calle Interna ID</label>
        <referenceTo>Street__c</referenceTo>
        <relationshipLabel>Addresses2 (Calle Interna ID)</relationshipLabel>
        <relationshipName>Addresses21</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Calle_Interna__c</fullName>
        <description>Zone internal Street</description>
        <label>Calle Interna</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calle_rio_de_atras_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Calle/río de atrás ID</label>
        <referenceTo>Street__c</referenceTo>
        <relationshipLabel>Addresses2 (Calle/río de atrás ID)</relationshipLabel>
        <relationshipName>Addresses22_callerio</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Calle_rio_de_atras__c</fullName>
        <description>Name of Rear Street, when present</description>
        <inlineHelpText>Name of Rear Street, when present</inlineHelpText>
        <label>Calle/río de atrás</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Addresses2</relationshipLabel>
        <relationshipName>Addresses2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Departamento__c</fullName>
        <label>Departamento</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entre_calle_interna_1_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entre calle interna 1 ID</label>
        <referenceTo>Street__c</referenceTo>
        <relationshipLabel>Addresses2 (Entre calle interna 1 ID)</relationshipLabel>
        <relationshipName>Addresses21_EntreCalle</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entre_calle_interna_1__c</fullName>
        <description>If “Entrecalles Requerido” is set</description>
        <label>Entre calle interna 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entre_calle_interna_2_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entre calle interna 2 ID</label>
        <referenceTo>Street__c</referenceTo>
        <relationshipLabel>Addresses2 (Entre calle interna 2 ID)</relationshipLabel>
        <relationshipName>Addresses2_EntreCalleInterna2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entre_calle_interna_2__c</fullName>
        <description>If “Entrecalles Requerido” is set</description>
        <label>Entre calle interna 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entre_calle_rio_1_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entre calle/río 1 ID</label>
        <referenceTo>Street__c</referenceTo>
        <relationshipLabel>Addresses2 (Entre calle/río 1 ID)</relationshipLabel>
        <relationshipName>Addresses22_entrecallerio1ID</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entre_calle_rio_1__c</fullName>
        <description>If “Entrecalles Requerido” is set</description>
        <label>Entre calle/río 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entre_calle_rio_2_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entre calle/río 2 ID</label>
        <referenceTo>Street__c</referenceTo>
        <relationshipLabel>Addresses2 (Entre calle/río 2 ID)</relationshipLabel>
        <relationshipName>Addresses22_EntrecallerioID2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entre_calle_rio_2__c</fullName>
        <description>If “Entrecalles Requerido” is set</description>
        <label>Entre calle/río 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EscaleraAla__c</fullName>
        <label>Escalera/Ala</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latitud__c</fullName>
        <label>Latitud</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location ID</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Addresses2</relationshipLabel>
        <relationshipName>Addresses2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <description>Callejero External ID - Unique, used for data upload &amp; synchronization</description>
        <label>Location Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitud__c</fullName>
        <label>Longitud</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lote__c</fullName>
        <label>Lote</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manzana__c</fullName>
        <label>Manzana</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Migrated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicador de si la cuenta fue migrada desde legado; cuando está valuado a TRUE indica de manera inequívoca que la dirección se migró de legado</description>
        <inlineHelpText>Indicador de si la cuenta fue migrada desde legado; cuando está valuado a TRUE indica de manera inequívoca que la dirección se migró de legado</inlineHelpText>
        <label>Migrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Muelle__c</fullName>
        <label>Muelle</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_del_Edificio__c</fullName>
        <description>Building Name</description>
        <label>Nombre del Edificio</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_del_Establecimiento__c</fullName>
        <label>Nombre del Establecimiento</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_del_Local__c</fullName>
        <description>Site Name</description>
        <label>Nombre del Local</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nro_Grupo_Edificio__c</fullName>
        <label>Nro Grupo Edificio</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_de_Edificio__c</fullName>
        <description>Address internal building number - If “Nro Edificio Requerido” is set</description>
        <label>Número de Edificio</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_Sector__c</fullName>
        <label>Numero de Sector</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_del_Local__c</fullName>
        <description>Site Number</description>
        <label>Numero del Local</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orientacion__c</fullName>
        <description>Orientación cardinal del domicilio</description>
        <inlineHelpText>Orientación cardinal del domicilio</inlineHelpText>
        <label>Orientación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Oeste</fullName>
                </value>
                <value>
                    <fullName>Norte</fullName>
                </value>
                <value>
                    <fullName>Sur</fullName>
                </value>
                <value>
                    <fullName>Este</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Piso__c</fullName>
        <description>Positive or negative (-n); also decimales (#.#) plus following apha: EP (Entre Piso), PB (Planta Baja), SS (Sub Suelo)
Required if “Piso Requerido” is set</description>
        <label>Piso</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planta__c</fullName>
        <label>Planta</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alta</fullName>
                </value>
                <value>
                    <fullName>Baja</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <description>Province Code for manual Location overrides</description>
        <label>Province</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Puerta__c</fullName>
        <label>Puerta</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Range_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Range ID for the Address2 record</description>
        <inlineHelpText>Range ID for the Address2 record</inlineHelpText>
        <label>Range ID</label>
        <referenceTo>Street__c</referenceTo>
        <relationshipLabel>Addresses2 (Range ID)</relationshipLabel>
        <relationshipName>Addresses22</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Range_Name__c</fullName>
        <description>Name of the Range record</description>
        <inlineHelpText>Name of the Range record</inlineHelpText>
        <label>Range Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seccion__c</fullName>
        <label>Seccion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Otras</fullName>
                </value>
                <value>
                    <fullName>Seccion Delta</fullName>
                </value>
                <value>
                    <fullName>Parana Medio</fullName>
                </value>
                <value>
                    <fullName>Alto Parana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Street_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Street ID</label>
        <referenceTo>Street__c</referenceTo>
        <relationshipLabel>Addresses2</relationshipLabel>
        <relationshipName>Addresses2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Street_Name__c</fullName>
        <description>Street Name</description>
        <label>Street Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_Grupo_Edificio__c</fullName>
        <label>Tipo Grupo Edificio</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Grupo</fullName>
                </value>
                <value>
                    <fullName>Nudo</fullName>
                </value>
                <value>
                    <fullName>Nucleo</fullName>
                </value>
                <value>
                    <fullName>Sector</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_Domicilio__c</fullName>
        <label>Tipo de Domicilio</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CASA</fullName>
                </value>
                <value>
                    <fullName>LOCAL</fullName>
                </value>
                <value>
                    <fullName>EDIFICIO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_Edificio__c</fullName>
        <description>Building Type</description>
        <label>Tipo de Edificio</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Comun</fullName>
                </value>
                <value>
                    <fullName>Torre</fullName>
                </value>
                <value>
                    <fullName>Monoblock</fullName>
                </value>
                <value>
                    <fullName>Complejo</fullName>
                </value>
                <value>
                    <fullName>Dock</fullName>
                </value>
                <value>
                    <fullName>Cuerpo</fullName>
                </value>
                <value>
                    <fullName>Tira</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_Local__c</fullName>
        <label>Tipo de Local</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Oficina</fullName>
                </value>
                <value>
                    <fullName>Puesto</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Kiosko</fullName>
                </value>
                <value>
                    <fullName>Garita</fullName>
                </value>
                <value>
                    <fullName>Cabina</fullName>
                </value>
                <value>
                    <fullName>Mostrador</fullName>
                </value>
                <value>
                    <fullName>Parada</fullName>
                </value>
                <value>
                    <fullName>Stand</fullName>
                </value>
                <value>
                    <fullName>Otros</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_Sector__c</fullName>
        <label>Tipo de Sector</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Etapa</fullName>
                </value>
                <value>
                    <fullName>Fraccion</fullName>
                </value>
                <value>
                    <fullName>Modulo</fullName>
                </value>
                <value>
                    <fullName>Nucleo</fullName>
                </value>
                <value>
                    <fullName>Seccion</fullName>
                </value>
                <value>
                    <fullName>Sector</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_Sitio__c</fullName>
        <label>Tipo de Sitio</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Supermercado</fullName>
                </value>
                <value>
                    <fullName>Otros</fullName>
                </value>
                <value>
                    <fullName>Universidad</fullName>
                </value>
                <value>
                    <fullName>Terminal</fullName>
                </value>
                <value>
                    <fullName>Aeropuerto</fullName>
                </value>
                <value>
                    <fullName>Bingo</fullName>
                </value>
                <value>
                    <fullName>Casino</fullName>
                </value>
                <value>
                    <fullName>Carcel</fullName>
                </value>
                <value>
                    <fullName>Centro de salud</fullName>
                </value>
                <value>
                    <fullName>Cines</fullName>
                </value>
                <value>
                    <fullName>Clubes Complejo deportivo</fullName>
                </value>
                <value>
                    <fullName>Convento</fullName>
                </value>
                <value>
                    <fullName>Edificio judicial</fullName>
                </value>
                <value>
                    <fullName>Escuela</fullName>
                </value>
                <value>
                    <fullName>Estacion de servicio</fullName>
                </value>
                <value>
                    <fullName>Estacion de tren</fullName>
                </value>
                <value>
                    <fullName>Estacionamiento</fullName>
                </value>
                <value>
                    <fullName>FastFood</fullName>
                </value>
                <value>
                    <fullName>Hotel</fullName>
                </value>
                <value>
                    <fullName>Iglesia</fullName>
                </value>
                <value>
                    <fullName>Laboratorio</fullName>
                </value>
                <value>
                    <fullName>Parador de ruta</fullName>
                </value>
                <value>
                    <fullName>Parque tematico</fullName>
                </value>
                <value>
                    <fullName>Plaza</fullName>
                </value>
                <value>
                    <fullName>Puerto</fullName>
                </value>
                <value>
                    <fullName>Shopping</fullName>
                </value>
                <value>
                    <fullName>Subte</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_Zona__c</fullName>
        <description>Tipo de Zona, according to “DUF_Atributos_BarriosV03.docx”</description>
        <label>Tipo de Zona</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>URBANA</fullName>
                </value>
                <value>
                    <fullName>BARRIO MUNICIPAL</fullName>
                </value>
                <value>
                    <fullName>BARRIO PRIVADO</fullName>
                </value>
                <value>
                    <fullName>RURAL</fullName>
                </value>
                <value>
                    <fullName>ISLA</fullName>
                </value>
                <value>
                    <fullName>PARQUE INDUSTRIAL</fullName>
                </value>
                <value>
                    <fullName>STANDARD</fullName>
                </value>
                <value>
                    <fullName>CASILLA DE CORREO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Validado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZIP_Code__c</fullName>
        <description>ZIP Code for manual overrides</description>
        <label>ZIP Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Zone ID / Code</description>
        <label>Zone ID</label>
        <referenceTo>Zones__c</referenceTo>
        <relationshipLabel>Addresses2</relationshipLabel>
        <relationshipName>Addresses2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zone_Name__c</fullName>
        <description>Zone Name</description>
        <label>Zone Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>casillaPostal__c</fullName>
        <label>casillaPostal</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sucursalNro__c</fullName>
        <label>sucursalNro</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Address2</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Province__c</columns>
        <columns>Region__c</columns>
        <columns>Departamento__c</columns>
        <columns>Location_Name__c</columns>
        <columns>ZIP_Code__c</columns>
        <columns>Range_ID__c</columns>
        <columns>Range_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Address-{00000000}</displayFormat>
        <label>Address2 Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addresses2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>